# django-simple-ssg

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
simple_ssg/: admin.py  apps.py  content.py  forms.py  models.py  smpl_tmplt_lng.py  ssg.py  urls.py  views.py
simple_ssg/bratmpl/: bratmpl.py
simple_ssg/management/commands/: create_pic.py  makecontent.py  proc_cntnt.py
simple_ssg/migrations/: 0001_initial.py  0002_filledcontactform_message_saved.py  0003_filledcontactform_subject.py  0004_documents.py  0005_alter_documents_the_file.py  0006_alter_documents_the_file.py  0007_files.py  0008_files_the_file_alter_documents_the_file.py  0009_files_uploaded_at.py  0010_alter_files_the_file.py  0011_remove_files_name_remove_files_users_files_user.py  0012_files_titfile_namele.py  0013_rename_titfile_namele_files_file_name.py
