[metadata]
name = django-simple_ssg
version = 0.1.2
description = A Django app to generate simple static sites.
long_description = file: README.md
url = https://github.com/gerhard-gs68/django-simple-ssg
author = Gerhard
author_email = gerhard.spitzlsperger@gs68.de
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate

[options.entry_points]
console_scripts =
    executable-name = simple_ssg.ssg:main


#[options.packages.find]
#where=simple_ssg
         